deployment.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: jenkins
#   namespace: jenkins
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: jenkins
#   template:
#     metadata:
#       labels:
#         app: jenkins
#     spec:
#       containers:
#       - name: jenkins
#         image: jenkins/jenkins:lts
#         ports:
#         - containerPort: 8080
#         env:
#         - name: JENKINS_OPTS
#           value: "--httpPort=8080"
#         volumeMounts:
#         - name: jenkins-home
#           mountPath: /var/jenkins_home
#       volumes:
#       - name: jenkins-home
#         persistentVolumeClaim:
#           claimName: jenkins-pvc


apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      # This ensures any new files created have the correct group ID
      securityContext:
        fsGroup: 1000
      
      containers:
      - name: jenkins
        image: jenkins/jenkins:lts
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: jenkins-home
          mountPath: /var/jenkins_home
      
      volumes:
      - name: jenkins-home
        persistentVolumeClaim:
          claimName: jenkins-pvc
